[Seema]ADDED: added underline to recent and all conversations word

--- a/Assignment4/index.html
+++ b/Assignment4/index.html
@@ -68,17 +68,17 @@
         <div class="thirdbox_nav_options">
 
           <div class="firstoption">
-            Recent Conversations
+            <a href="" class="link">Recent Conversations</a>
           </div>
 
           <div class="secondoption">
-            <a href="" class="link_nav">
+            <a href="" class="link">
                 All Conversations
             </a>
           </div>
 
           <div class="thirdoption">
-            <a href="" class="link_nav">Photos</a>
+            Photos
           </div>
         </div>
 
